--- a/config/initFolder/template/layout.html
+++ b/config/initFolder/template/layout.html
@@ -4,7 +4,7 @@
     <title>{{ siteTitre }} | {{ pageTitre }}</title>
 </head>
 <body>
-    {% include menu.html }
+    {{ menu }}
     {{ content }}
 </body>
 </html>
